# project-aether

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  cppcheck.cfg  justfile  vcpkg.json
.github/prompts/: copyright.prompt.md
cmake/: DoctestHelpers.cmake  GitSubmodule.cmake
configs/: .vsconfig
docs/: CMAKE_RULES.md  GLOSSARY.md  RESSOURCES.md  ROADMAP.md  WHY-AETHER.md
include/: CMakeLists.txt  config.hpp
lib/: CMakeLists.txt
lib/Geometry/: Vextex.hpp
lib/Images/: Jpeg.cpp  Jpeg.hpp
lib/Loaders/: Obj.cpp  Obj.hpp
lib/Utils/: Handlers.cpp  Handlers.hpp
lib/Utils/Files/: Handlers.cpp  Handlers.hpp
scripts/: install.ps1
src/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  helloworld.cpp  main.cpp  shader_base.slang
tests/: CMakeLists.txt
tools/dev/: bootstrap.ps1
